force-app/main/default/objects/Sales_Districts__c/Sales_Districts__c.object-meta.xml
<CustomObject>
    <description>Sales Districts for territories</description>
    <label>Sales District</label>
    <nameField>
        <label>District</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>