force-app/main/default/objects/Sales_Districts__c/fields/Business_Unit_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Region__c</fullName>
    <label>Business Unit Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FS - East Region</fullName>
            </value>
            <value>
                <fullName>FS - Central Region</fullName>
            </value>
            <value>
                <fullName>FS - West Region</fullName>
            </value>
            <value>
                <fullName>FS - National Event</fullName>
            </value>
            <value>
                <fullName>FS - Bakken Region</fullName>
            </value>
            <value>
                <fullName>IS - Canada Industrial</fullName>
            </value>
            <value>
                <fullName>IS - Oil Sands Ops</fullName>
            </value>
            <value>
                <fullName>IS - US Industrial Services</fullName>
            </value>
            <value>
                <fullName>TS - Tech Services Northeast</fullName>
            </value>
            <value>
                <fullName>TS - Tech Services Gulf</fullName>
            </value>
            <value>
                <fullName>TS - Tech Central</fullName>
            </value>
            <value>
                <fullName>TS - Tech Services West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>