force-app/main/default/objects/Sales_Districts__c/fields/Business_Unit_VP__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Districts2</relationshipName>
    <type>Lookup</type>
</CustomField>