force-app/main/default/objects/Sales_Districts__c/fields/Business_Unit_VP_Username__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_VP_Username__c</fullName>
    <formula>Business_Unit_VP__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit VP Username</label>
    <type>Text</type>
</CustomField>