force-app/main/default/objects/Sales_Districts__c/fields/District_Manager__c.field-meta.xml
<CustomField>
    <fullName>District_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ops District manager</description>
    <label>District Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Districts3</relationshipName>
    <type>Lookup</type>
</CustomField>