force-app/main/default/objects/Sales_Districts__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>District Sales Manager</description>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Districts</relationshipName>
    <type>Lookup</type>
</CustomField>