force-app/main/default/objects/Sales_Districts__c/fields/Sales_Manager_Username__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Username__c</fullName>
    <formula>Sales_Manager__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager Username</label>
    <type>Text</type>
</CustomField>