force-app/main/default/objects/Sales_Districts__c/fields/Sales_VP__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Districts1</relationshipName>
    <type>Lookup</type>
</CustomField>