force-app/main/default/objects/Sales_Districts__c/fields/Sales_VP_username__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP_username__c</fullName>
    <formula>Sales_VP__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales VP username</label>
    <type>Text</type>
</CustomField>