force-app/main/default/objects/Sales_Districts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Business_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Business_Unit_VP__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_VP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>